<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/favorite_icon_color_selector"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/contacts"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_import_contacts_24"
        android:title="@string/contacts"/>

</menu>