<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingAppBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchShowAdult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/show_adult_films"
        android:theme="@style/ThemeOverlay.App.Switch"
        app:useMaterialThemeColors="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@+id/settingAppBarLayout" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appVersionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_normal"
        android:hint="@string/app_version"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

</androidx.constraintlayout.widget.ConstraintLayout>